# ThetaStarRRT_original

Config/: posq_params.ini  robot_params.ini  robot_type.ini  rrt_params.ini
Input/: image.txt  image2.txt  image3.txt  image4.txt  input3.txt  inputs.txt  inputs1.txt  inputs2.txt  inputs3.txt  map_0.txt  map_1.txt  map_10.txt  map_12.txt  map_16.txt  map_19.txt  map_20.txt  map_22.txt  map_24.txt  map_27.txt  map_28.txt  map_29.txt  map_33.txt  map_34.txt  map_35.txt  map_36.txt  map_37.txt  map_41.txt  map_43.txt  map_46.txt  map_47.txt  map_49.txt  map_50.txt  map_52.txt  map_58.txt  map_59.txt  map_61.txt  map_62.txt  map_63.txt  map_68.txt  map_71.txt  (+17 more)
Input/test1/: input1.txt
Input/test2/: image2.ppm  input2.txt
Input/test3/: image3.ppm
Input/test4/: input4.txt
Output/: Theta_star_path_length2.txt  Theta_star_path_length3.txt  Theta_star_rrt_path_length1.txt  Theta_star_rrt_path_length2.txt  Theta_star_rrt_time3.txt
Output/results/: Theta_star_path_length1.txt  Theta_star_path_length4.txt  Theta_star_rrt_path_length3.txt  Theta_star_rrt_path_length4.txt  Theta_star_rrt_time1.txt  Theta_star_rrt_time2.txt  (+5 more)
src/: CMakeLists.txt  carlikerobot.cpp  carlikerobot.h  ddrobot.cpp  ddrobot.h  geometricfunctions.cpp  geometricfunctions.h  main.cpp  map.cpp  map.h  node.cpp  node.h  position.cpp  position.h  posq.cpp  posq.h  posq2.cpp  posq2.h  readconfigfunctions.cpp  readconfigfunctions.h  robot.h  robotstate.cpp  robotstate.h  rrt.cpp  rrt.h  state.cpp  state.h  thetastar.cpp  thetastar.h  thetastarrrt.cpp  thetastarrrt.h
src/Output/: path.txt
(+159 files in other folders)
